@@ -14,15 +14,14 @@ public class InterpreterTest {
         KeywordInterpreter i = new KeywordInterpreter();
         AbstractSyntaxTree tree = new AbstractSyntaxTree();
 
-        Node n1 = new Node("'Peter'");
-        Node n2 = new Node("name");
-        Node n3 = new Node("String");
-        Node n4 = new Node("literal", new ArrayList<>(List.of(n1)));
-        Node n5 = new Node("Declaration", new ArrayList<>(Arrays.asList(n3,n2)));
-        tree.addSentence("Assignation", new ArrayList<>(Arrays.asList(n5,n4)));
+        Node n1 = new ValueNode("'Peter'");
+        Node n2 = new NameNode("name");
+        Node n3 = new TypeNode("String");
+        Node n5 = new DeclareNode("Declaration", new ArrayList<>(Arrays.asList(n3,n2)));
+        tree.addSentence(new AssignDeclareNode("Assignation", new ArrayList<>(Arrays.asList(n5,n1))));
         HashMap<String,String> types = new HashMap<>();
         HashMap<String,String> values = new HashMap<>();
 
-        assertTrue(i.validate(tree));
+        assertTrue(i.validate(tree.root));
     }
 }
